# dopemux

./: .gitignore  AUDIT.md  EXPORT-PROJECT.sh  MANIFEST.in  PR_PLANS.md  README.md  TFE-AUDIT-ULTRA-RITUAL.txt  TFE-DEVLOG.txt  UBERSLICER_DESIGN.md  agents.md  all-files.md  audit.json  banner_loader.py  banners.py  cli.py  config.yaml  dopemux-all-files.md  dopemux-manifest.json  manifest-gen.py  manifest.json  manifest.txt  pyproject.toml  repo_audit.py  uberslicer-all.txt  uberslicer-manifest.yaml  uberslicer.py  utils.py  yaml.py
DOPEMUX-UBERSLICER-TFE/: .gitignore  .pre-commit-config.yaml  README.md  TFE-AUDIT-ULTRA-RITUAL.txt  TFE-DEVLOG.txt  all-files.md  config.yaml  dopemux_terminal.zsh  pyproject.toml  requirements.txt  state.yaml  uberslicer_project_init.py
DOPEMUX-UBERSLICER-TFE/docs/: DopamineRoastAndLogTemplatesmd.md  Dopemux-product-roadmap.md  MUST-BUILD-API-SPEC.md  Terminal dopamine flowing.md  dopemux-project-breakdown.md  ultraslicer-product-rundown.md
DOPEMUX-UBERSLICER-TFE/prompts/: TFE-AUDIT-ULTRA-RITUAL.txt  TFE-DESIGN-PATTERNS.txt  TFE-DEVLOG.txt  TFE-FND-ULTRA-RITUAL.txt  TFE-INDEX.txt  TFE-INSTRUCTIONS.txt  TFE-METAFILE.txt  TFE-OUTPUTS.txt  TFE-SCHEMA.txt  TFE-USER-CUSTOM.txt  UBERSLICER_OMNIBUS_v1.md
DOPEMUX-UBERSLICER-TFE/schemas/: artifact.json  devlog.json  prompt.json  schemas.yaml  ultraslice.json
DOPEMUX-UBERSLICER-TFE/scripts/: generate-manifest.py  split_yaml_to_json.py  update-reference.zsh  update-state-from-gpt.py  update-state.py
DOPEMUX-UBERSLICER-TFE/src/dopemux_ultraslicer/: __init__.py  build_hooks.py  chunkasaurus.py  (+3 more)
(+118 files in other folders)
